[gd_scene load_steps=11 format=3 uid="uid://cvd6be1uiurut"]

[ext_resource type="Theme" uid="uid://byrcb4i2k5ktu" path="res://resources/themes/title.theme" id="1_gwhgk"]
[ext_resource type="Script" path="res://scenes/menus/title.gd" id="2_txdo0"]
[ext_resource type="Texture2D" uid="uid://b8j0w4vtmdfy5" path="res://img/ui/title_logo.png" id="3_ewks7"]
[ext_resource type="Texture2D" uid="uid://b4nfgaraappdy" path="res://img/QueenLogo.png" id="3_qsa3a"]
[ext_resource type="StyleBox" uid="uid://dh3owi5505h6m" path="res://resources/themes/btn1_normal.stylebox" id="4_xbahy"]
[ext_resource type="FontFile" uid="uid://bdpunr7swhxhp" path="res://fonts/Chomsky.otf" id="5_e0cgw"]

[sub_resource type="Animation" id="Animation_y6uy2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Popup:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(234, -1000)]
}

[sub_resource type="Animation" id="Animation_gg8u1"]
resource_name = "credits"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Popup:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Popup:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2i(-600, 365), Vector2i(24, 365)]
}

[sub_resource type="Animation" id="Animation_x7b1i"]
resource_name = "open"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleMaskTop:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.6, 1),
"transitions": PackedFloat32Array(0.5, 1, 1),
"update": 0,
"values": [Vector2(0, 293), Vector2(673, 293), Vector2(673, 293)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitleMaskBottom:size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(434, 260), Vector2(1232, 260)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.3, 1.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_title_song"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/TextureRect:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(234, -1000), Vector2(234, -200)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4atxx"]
_data = {
"RESET": SubResource("Animation_y6uy2"),
"credits": SubResource("Animation_gg8u1"),
"open": SubResource("Animation_x7b1i")
}

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gwhgk")
script = ExtResource("2_txdo0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.788235, 0.721569, 0.603922, 1)

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 234.0
offset_top = -1000.0
offset_right = 1677.0
offset_bottom = 145.0
texture = ExtResource("3_qsa3a")

[node name="TitleMaskTop" type="Control" parent="."]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 367.0
offset_top = 73.0
offset_right = -880.0
offset_bottom = -714.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="TitleLogo" type="TextureRect" parent="TitleMaskTop"]
layout_mode = 1
offset_right = 1186.0
offset_bottom = 554.0
texture = ExtResource("3_ewks7")
expand_mode = 1

[node name="TitleMaskBottom" type="Control" parent="."]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 338.0
offset_top = 379.0
offset_right = -350.0
offset_bottom = -441.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="TitleLogo" type="TextureRect" parent="TitleMaskBottom"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -554.0
offset_right = 1186.0
grow_vertical = 0
texture = ExtResource("3_ewks7")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -379.0
offset_right = 220.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(220, 0)

[node name="BtnPlay" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="BtnCredits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="BtnQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4atxx")
}
autoplay = "open"

[node name="Popup" type="Popup" parent="."]
transparent_bg = true
position = Vector2i(24, 365)
size = Vector2i(500, 700)
unresizable = false
transparent = true

[node name="Panel" type="Panel" parent="Popup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("4_xbahy")

[node name="Control" type="Control" parent="Popup/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Popup/Panel/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.5
offset_bottom = 117.625
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_e0cgw")
theme_override_font_sizes/font_size = 60
text = "QueenSlayer Team"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Popup/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/Panel/MarginContainer"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="Popup/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="Design" type="Label" parent="Popup/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "Design"

[node name="Label" type="Label" parent="Popup/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Daniel \"Guarah\" Feitosa"

[node name="HSeparator" type="HSeparator" parent="Popup/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Graphics" type="Label" parent="Popup/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "Graphics"

[node name="Label2" type="Label" parent="Popup/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Gabas"

[node name="HSeparator2" type="HSeparator" parent="Popup/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Audio" type="Label" parent="Popup/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "Audio"

[node name="Label3" type="Label" parent="Popup/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Maths"

[node name="HSeparator3" type="HSeparator" parent="Popup/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Programming" type="Label" parent="Popup/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "Programming"

[node name="Label4" type="Label" parent="Popup/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Natan Maia"

[connection signal="pressed" from="VBoxContainer/BtnPlay" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnCredits" to="." method="_on_btn_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnQuit" to="." method="_on_btn_quit_pressed"]
